<resources>
    <string name="app_name">Trick Calculator</string>
    <string name="title_action_bar">Calculator</string>

    <!-- Numpad -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="lparen">(</string>
    <string name="rparen">)</string>
    <string name="decimal">.</string>
    <string name="exp">^</string>
    <string name="clear">CE</string>
    <string name="pi">PI</string>

    <!-- Settings UI -->
    <!-- Title/Section Headings -->
    <string name="title_settings">Settings</string>
    <string name="computation">Computation</string>
    <string name="view">View</string>
    <string name="all_settings">Update All Settings</string>
    <!-- Settings Labels -->
    <string name="shuffle_operators">Shuffle Operators</string>
    <string name="shuffle_numbers">Shuffle Numbers</string>
    <string name="apply_parens">Apply Parens</string>
    <string name="clear_on_error">Reset on Error</string>
    <string name="apply_decimals">Apply Decimals</string>
    <string name="show_settings_button">Show Settings Button</string>
    <string name="random_history_label">History Mode</string>
    <string name="reset_settings">Reset</string>
    <string name="randomize_settings">Randomize</string>
    <string name="shuffle_computation">Shuffle Computation</string>

    <!-- Settings Keys -->
    <string name="key_settings_request">settingsUpdateRequest</string>
    <string name="key_shuffle_numbers">shuffleNumbers</string>
    <string name="key_shuffle_operators">shuffleOperators</string>
    <string name="key_apply_parens">applyParens</string>
    <string name="key_clear_on_error">clearOnError</string>
    <string name="key_apply_decimals">applyDecimals</string>
    <string name="key_settings_button">showSettingsButton</string>
    <string name="key_main_fragment">isMainFragment</string>
    <string name="key_random_history">randomHistory</string>
    <string name="key_shuffle_computation">shuffleComputation</string>

    <!-- Attributions -->
    <string name="title_attributions">Image Attributions</string>
    <string name="link">Link</string>
    <string name="flaticon_message">All icons are taken from Flaticon, which allows free use of icons for personal and commercial purposes with attribution. In accordance with their policies, attributions are provided below.\n\nSee here for more information about their policies.</string>
    <string name="flaticon_message_short">All icons are taken from Flaticon. Expand for details of their attribution policies.</string>
    <string name="author_attr_template">Icon made by %s from %s</string>
    <string name="show_link">Show link</string>
    <string name="hide_link">Hide link</string>
    <string name="show_icons">Show icons</string>
    <string name="hide_icons">Hide icons</string>

    <!-- History -->
    <string name="title_history">Computation History</string>
    <string name="no_history">No history</string>
    <string name="history_error">Error retrieving history</string>

    <!-- Developer Tools -->
    <string name="title_dev_tools">Developer Tools</string>
    <string name="dev_tools_button">{ }</string>
    <string name="clear_history">Clear history</string>
    <string name="refresh_ui">Refresh UI</string>
    <string name="show_settings_dialog">Show settings dialog</string>
    <string name="hide_dev_tools">Hide dev tools</string>
    <string-array name="dev_tools_time_options">
        <item>1000ms</item>
        <item>5000ms</item>
        <item>10000ms</item>
    </string-array>

    <!-- Other/Shared -->
    <string name="dev_mode">Dev mode</string>
    <string name="done">Done</string>

    <!-- Content Descriptions -->
    <string name="launcher_cd">Calculator symbol</string>
    <string name="backspace_cd">Backspace</string>
    <string name="close_cd">Close</string>
    <string name="divide_cd">Divide symbol</string>
    <string name="equals_cd">Equals symbol</string>
    <string name="history_cd">History</string>
    <string name="minus_cd">Minus symbol</string>
    <string name="info_cd">Additional information</string>
    <string name="plus_cd">Plus symbol</string>
    <string name="settings_cd">Settings</string>
    <string name="times_cd">Times symbol</string>
    <string name="expand_dropdown_cd">Show icons</string>
    <string name="collapse_dropdown_cd">Hide icons</string>
    <string name="chevron_down_cd">Down chevron</string>
    <string name="chevron_left_cd">Left chevron</string>
    <string name="chevron_right_cd">Right chevron</string>
    <string name="chevron_up_cd">Up chevron</string>
</resources>