<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingTop="5dp">

    <!-- Switches -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/shuffleOperatorsSwitch"
        style="@style/SettingsDialogItem"
        android:checked="true"
        android:text="@string/shuffle_operators"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/shuffleNumbersSwitch"
        style="@style/SettingsDialogItem"
        android:text="@string/shuffle_numbers"
        app:layout_constraintTop_toBottomOf="@id/shuffleOperatorsSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/applyParensSwitch"
        style="@style/SettingsDialogItem"
        android:checked="true"
        android:text="@string/apply_parens"
        app:layout_constraintTop_toBottomOf="@id/shuffleNumbersSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/clearOnErrorSwitch"
        style="@style/SettingsDialogItem"
        android:text="@string/clear_on_error"
        app:layout_constraintTop_toBottomOf="@id/applyParensSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/applyDecimalsSwitch"
        style="@style/SettingsDialogItem"
        android:checked="true"
        android:text="@string/apply_decimals"
        app:layout_constraintTop_toBottomOf="@id/clearOnErrorSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settingsButtonSwitch"
        style="@style/SettingsDialogItem"
        android:text="@string/show_settings_button"
        app:layout_constraintTop_toBottomOf="@id/applyDecimalsSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/shuffleComputationSwitch"
        style="@style/SettingsDialogItem"
        android:text="@string/shuffle_computation"
        app:layout_constraintTop_toBottomOf="@id/settingsButtonSwitch"
        tools:ignore="MissingConstraints" />

    <!-- RadioGroup for history randomness -->
    <RadioGroup
        android:id="@+id/historyRandomnessGroup"
        style="@style/SettingsDialogItem"
        android:checkedButton="@id/historyButton0"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/shuffleComputationSwitch"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/random_history_label"
            android:textColor="?colorOnBackground"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/historyButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/historyButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/historyButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/historyButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three" />
    </RadioGroup>

    <!-- Buttons that affect all settings -->
    <Button
        android:id="@+id/resetSettingsButton"
        style="@style/DialogButton"
        android:text="@string/reset_settings" />

    <Button
        android:id="@+id/randomizeSettingsButton"
        style="@style/DialogButton"
        android:text="@string/randomize_settings" />

    <Button
        android:id="@+id/standardFunctionButton"
        style="@style/DialogButton"
        android:text="@string/standard_function" />

</LinearLayout>
