<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    android:paddingTop="5dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/shuffleOperatorsSwitch"
        style="@style/SettingsSwitch"
        android:checked="true"
        android:text="@string/shuffle_operators"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/shuffleNumbersSwitch"
        style="@style/SettingsSwitch"
        android:text="@string/shuffle_numbers"
        app:layout_constraintTop_toBottomOf="@id/shuffleOperatorsSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/applyParensSwitch"
        style="@style/SettingsSwitch"
        android:checked="true"
        android:text="@string/apply_parens"
        app:layout_constraintTop_toBottomOf="@id/shuffleNumbersSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/clearOnErrorSwitch"
        style="@style/SettingsSwitch"
        android:text="@string/clear_on_error"
        app:layout_constraintTop_toBottomOf="@id/applyParensSwitch"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/applyDecimalsSwitch"
        style="@style/SettingsSwitch"
        android:checked="true"
        android:text="@string/apply_decimals"
        app:layout_constraintTop_toBottomOf="@id/clearOnErrorSwitch"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>