<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.main.MainFragment">

    <ImageButton
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="History button"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_history"
        app:layout_constraintBottom_toTopOf="@id/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?colorPrimary"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_numpad"
        android:paddingHorizontal="10dp"
        android:scrollbars="vertical"
        android:textColor="?colorOnPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textColor="?errorColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/mainText" />

    <GridLayout
        android:id="@+id/numpadLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:columnCount="4"
        android:rowCount="6"
        android:useDefaultMargins="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorText">

        <Button
            android:id="@+id/oneButton"
            style="@style/NumpadButton"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/button_numpad"
            android:text="@string/one" />

        <Button
            android:id="@+id/twoButton"
            style="@style/NumpadButton"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/button_numpad"
            android:text="@string/two" />

        <Button
            android:id="@+id/threeButton"
            style="@style/NumpadButton"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/button_numpad"
            android:text="@string/three" />

        <Button
            android:id="@+id/fourButton"
            style="@style/NumpadButton"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/button_numpad"
            android:text="@string/four" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/NumpadButton"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/button_numpad"
            android:text="@string/five" />

        <Button
            android:id="@+id/sixButton"
            style="@style/NumpadButton"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/button_numpad"
            android:text="@string/six" />

        <Button
            android:id="@+id/sevenButton"
            style="@style/NumpadButton"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/button_numpad"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eightButton"
            style="@style/NumpadButton"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/button_numpad"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nineButton"
            style="@style/NumpadButton"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/button_numpad"
            android:text="@string/nine" />

        <Button
            android:id="@+id/zeroButton"
            style="@style/NumpadButton"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/button_numpad"
            android:text="@string/zero" />

        <ImageButton
            android:id="@+id/plusButton"
            style="@style/NumpadButton.Image"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@drawable/button_numpad"
            android:contentDescription="Plus button"
            android:src="@drawable/ic_plus"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/minusButton"
            style="@style/NumpadButton.Image"
            android:layout_row="1"
            android:layout_column="3"
            android:background="@drawable/button_numpad"
            android:contentDescription="Minus button"
            android:src="@drawable/ic_minus"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/timesButton"
            style="@style/NumpadButton.Image"
            android:layout_row="2"
            android:layout_column="3"
            android:background="@drawable/button_numpad"
            android:contentDescription="Multiplication button"
            android:src="@drawable/ic_times"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/divideButton"
            style="@style/NumpadButton.Image"
            android:layout_row="3"
            android:layout_column="3"
            android:background="@drawable/button_numpad"
            android:contentDescription="Divide button"
            android:src="@drawable/ic_divide"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/lparenButton"
            style="@style/NumpadButton"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@drawable/button_numpad"
            android:text="@string/lparen" />

        <Button
            android:id="@+id/rparenButton"
            style="@style/NumpadButton"
            android:layout_row="3"
            android:layout_column="2"
            android:background="@drawable/button_numpad"
            android:text="@string/rparen" />

        <Button
            android:id="@+id/decimalButton"
            style="@style/NumpadButton"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@drawable/button_numpad"
            android:text="@string/decimal" />

        <ImageButton
            android:id="@+id/backspaceButton"
            style="@style/NumpadButton.Image"
            android:layout_row="4"
            android:layout_column="1"
            android:background="@drawable/button_numpad"
            android:contentDescription="Backspace button"
            android:src="@drawable/ic_arrow_left"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/clearButton"
            style="@style/NumpadButton"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="top"
            android:background="@drawable/button_numpad"
            android:text="@string/clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/expButton"
            style="@style/NumpadButton"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_gravity="top"
            android:background="@drawable/button_numpad"
            android:text="@string/exp" />

        <ImageButton
            android:id="@+id/equalsButton"
            style="@style/NumpadButton.Image"
            android:layout_row="5"
            android:layout_column="3"
            android:background="@drawable/button_numpad"
            android:contentDescription="Equals button"
            android:src="@drawable/ic_equals"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/piButton"
            style="@style/NumpadButton"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_gravity="top"
            android:background="@drawable/button_numpad"
            android:enabled="false"
            android:visibility="gone"
            android:text="@string/pi"
            android:textSize="20sp" />

    </GridLayout>

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toTopOf="@id/infoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?colorPrimary"
        tools:ignore="HardcodedText,RtlSymmetry"
        android:visibility="gone"
        android:contentDescription="Settings button" />


    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="Info button"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?colorPrimary"
        tools:ignore="HardcodedText,RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>