<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp">

    <Button
        android:id="@+id/clearHistoryButton"
        style="@style/DeveloperToolsButton"
        android:layout_marginTop="0dp"
        android:text="@string/clear_history" />

    <Button
        android:id="@+id/refreshUIButton"
        style="@style/DeveloperToolsButton"
        android:text="@string/refresh_ui" />

    <Button
        android:id="@+id/settingsDialogButton"
        style="@style/DeveloperToolsButton"
        android:text="@string/show_settings_dialog" />

    <Button
        android:id="@+id/hideDevToolsButton"
        style="@style/DeveloperToolsButton"
        android:text="@string/hide_dev_tools" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/devToolsTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dev_tools_timer"
            android:textColor="?colorOnPrimary"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/devToolsTimeSpinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="5dp"
            android:background="@drawable/spinner_background" />
    </LinearLayout>

</LinearLayout>
