<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor">

    <include layout="@layout/component_close_button" android:id="@+id/closeButton" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:scrollbars="vertical"
        android:text="@string/title_history"
        android:textColor="?colorOnBackground"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/closeButton" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="1dp"
        android:background="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/noHistoryMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:textColor="?colorOnBackground"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/no_history"
        android:visibility="gone" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textColor="?errorColor"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/history_error"
            android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
